--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,8 +5,10 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
 project.org.zq.GraphGen=BAPreferentialAttachment
+project.org.zq.Mule=FindingMule
 run.args.extra=-J-Xms256m -J-Xmx1000m -J-Dsun.java2d.noddraw=true -J-Dsun.awt.noerasebackground=true
 app.name=gephi
 branding.token=${app.name}
 modules=\
-    ${project.org.zq.GraphGen}
+    ${project.org.zq.GraphGen}:\
+    ${project.org.zq.Mule}
