Added a plugin for computing betweenness centrality
The computation is based on Brandes' Algorithm, to check the correctness
of implementation.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ auxiliary.org-netbeans-modules-apisupport-installer.os-macosx=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-solaris=false
 auxiliary.org-netbeans-modules-apisupport-installer.os-windows=false
 auxiliary.org-netbeans-modules-apisupport-installer.pack200-enabled=false
+project.org.zq.BrandesBetw=BrandesBetweenness
 project.org.zq.GraphGen=BAPreferentialAttachment
 project.org.zq.Mule=FindingMule
 run.args.extra=-J-Xms256m -J-Xmx1000m -J-Dsun.java2d.noddraw=true -J-Dsun.awt.noerasebackground=true
@@ -11,4 +12,5 @@ app.name=gephi
 branding.token=${app.name}
 modules=\
     ${project.org.zq.GraphGen}:\
-    ${project.org.zq.Mule}
+    ${project.org.zq.Mule}:\
+    ${project.org.zq.BrandesBetw}
